fix: handle multiple field value kinds in ProcessViewRawDataInterpreter* sorting logic
closes https://github.com/camunda/camunda/issues/40752